fix: style footer for smaller screens to properly align copyright

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,7 +374,7 @@ footer a:hover {
 
     .burger-menu-main {
         float: right;
-        margin-right: 10px;
+        margin-right: 20px;
         display: flex;
         align-items: baseline;
         color: #2F4F4F;
@@ -698,11 +698,17 @@ footer a:hover {
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: center;
-        margin: 0;
+        margin: 0 0 20px 0;
     }
 
     .external-links a {
         padding: 0 10px;
+    }
+
+    .copyright {
+        position: static;
+        width: 100%;
+        text-align: center;
     }
 
     /* Information pages */
